Adding API key and fixing experiment ID

--- a/examples/notebooks/test_app.ipynb
+++ b/examples/notebooks/test_app.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "import os\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
     "os.environ[\"HEGELAI_API_KEY\"] = \"\""
    ]
   },
@@ -276,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e3882118-08e5-43c2-8d2d-2db118fbc60b'"
+       "'ed500f64-9589-4acb-b479-f201abfe6865'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -336,29 +336,189 @@
      "output_type": "stream",
      "text": [
       "Sending HTTP GET request...\n",
-      "Error: 500, {\n",
-      "  \"error\": \"\\\"['_id', 'user_id', 'experiment_id', 'experiment_name', 'timestamp'] not found in axis\\\"\"\n",
-      "}\n",
-      "\n"
+      "experiment.full_df =            model  \\\n",
+      "0  gpt-3.5-turbo   \n",
+      "1  gpt-3.5-turbo   \n",
+      "\n",
+      "                                                                                                                       messages  \\\n",
+      "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+      "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+      "\n",
+      "   temperature  top_p  n  stream  presence_penalty  frequency_penalty  \\\n",
+      "0  0.0          1.0    1  False   0.0               0.0                 \n",
+      "1  1.0          1.0    1  False   0.0               0.0                 \n",
+      "\n",
+      "                                                                                                    response  \\\n",
+      "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
+      "1  The first president of the United States was George Washington.                                             \n",
+      "\n",
+      "                              response_id  response_object  response_created  \\\n",
+      "0  chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF  chat.completion  1697065794         \n",
+      "1  chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3  chat.completion  1697065795         \n",
+      "\n",
+      "       response_model  \\\n",
+      "0  gpt-3.5-turbo-0613   \n",
+      "1  gpt-3.5-turbo-0613   \n",
+      "\n",
+      "                                                                                                                                                                                    response_choices  \\\n",
+      "0  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]   \n",
+      "1  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]                                             \n",
+      "\n",
+      "                                                       response_usage  \\\n",
+      "0  {'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}   \n",
+      "1  {'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}   \n",
+      "\n",
+      "    latency                           revision_id  \n",
+      "0  1.934486  86bf8267-b648-45ff-b4bc-c82ef112f6ab  \n",
+      "1  0.709772  86bf8267-b648-45ff-b4bc-c82ef112f6ab  \n",
+      "Loaded experiment.\n"
      ]
     }
    ],
    "source": [
-    "experiment_from_load = OpenAIChatExperiment.load_experiment(\"e3882118-08e5-43c2-8d2d-2db118fbc60b\")"
+    "experiment_from_load = OpenAIChatExperiment.load_experiment('ed500f64-9589-4acb-b479-f201abfe6865')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>messages</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>top_p</th>\n",
+       "      <th>n</th>\n",
+       "      <th>stream</th>\n",
+       "      <th>presence_penalty</th>\n",
+       "      <th>frequency_penalty</th>\n",
+       "      <th>response</th>\n",
+       "      <th>response_id</th>\n",
+       "      <th>response_object</th>\n",
+       "      <th>response_created</th>\n",
+       "      <th>response_model</th>\n",
+       "      <th>response_choices</th>\n",
+       "      <th>response_usage</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>revision_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gpt-3.5-turbo</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
+       "      <td>chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF</td>\n",
+       "      <td>chat.completion</td>\n",
+       "      <td>1697065794</td>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]</td>\n",
+       "      <td>{'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}</td>\n",
+       "      <td>1.934486</td>\n",
+       "      <td>86bf8267-b648-45ff-b4bc-c82ef112f6ab</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gpt-3.5-turbo</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>The first president of the United States was George Washington.</td>\n",
+       "      <td>chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3</td>\n",
+       "      <td>chat.completion</td>\n",
+       "      <td>1697065795</td>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]</td>\n",
+       "      <td>{'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}</td>\n",
+       "      <td>0.709772</td>\n",
+       "      <td>86bf8267-b648-45ff-b4bc-c82ef112f6ab</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           model  \\\n",
+       "0  gpt-3.5-turbo   \n",
+       "1  gpt-3.5-turbo   \n",
+       "\n",
+       "                                                                                                                       messages  \\\n",
+       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "\n",
+       "   temperature  top_p  n  stream  presence_penalty  frequency_penalty  \\\n",
+       "0  0.0          1.0    1  False   0.0               0.0                 \n",
+       "1  1.0          1.0    1  False   0.0               0.0                 \n",
+       "\n",
+       "                                                                                                    response  \\\n",
+       "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
+       "1  The first president of the United States was George Washington.                                             \n",
+       "\n",
+       "                              response_id  response_object  response_created  \\\n",
+       "0  chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF  chat.completion  1697065794         \n",
+       "1  chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3  chat.completion  1697065795         \n",
+       "\n",
+       "       response_model  \\\n",
+       "0  gpt-3.5-turbo-0613   \n",
+       "1  gpt-3.5-turbo-0613   \n",
+       "\n",
+       "                                                                                                                                                                                    response_choices  \\\n",
+       "0  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]   \n",
+       "1  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]                                             \n",
+       "\n",
+       "                                                       response_usage  \\\n",
+       "0  {'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}   \n",
+       "1  {'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}   \n",
+       "\n",
+       "    latency                           revision_id  \n",
+       "0  1.934486  86bf8267-b648-45ff-b4bc-c82ef112f6ab  \n",
+       "1  0.709772  86bf8267-b648-45ff-b4bc-c82ef112f6ab  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment_from_load.full_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +546,6 @@
        "      <th>messages</th>\n",
        "      <th>response</th>\n",
        "      <th>latency</th>\n",
-       "      <th>dumb_eval</th>\n",
        "      <th>dumb_eval_metric</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -396,8 +555,7 @@
        "      <td>0.0</td>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
-       "      <td>0.859089</td>\n",
-       "      <td>EVAL'ED The first</td>\n",
+       "      <td>1.934486</td>\n",
        "      <td>EVAL'ED The first</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -405,8 +563,7 @@
        "      <td>1.0</td>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>The first president of the United States was George Washington.</td>\n",
-       "      <td>1.121416</td>\n",
-       "      <td>EVAL'ED The first</td>\n",
+       "      <td>0.709772</td>\n",
        "      <td>EVAL'ED The first</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -426,9 +583,9 @@
        "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
        "1  The first president of the United States was George Washington.                                             \n",
        "\n",
-       "    latency           dumb_eval    dumb_eval_metric  \n",
-       "0  0.859089  EVAL'ED The first   EVAL'ED The first   \n",
-       "1  1.121416  EVAL'ED The first   EVAL'ED The first   "
+       "    latency    dumb_eval_metric  \n",
+       "0  1.934486  EVAL'ED The first   \n",
+       "1  0.709772  EVAL'ED The first   "
       ]
      },
      "metadata": {},
@@ -560,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +725,7 @@
      "output_type": "stream",
      "text": [
       "Response:\n",
-      "200\n"
+      "401\n"
      ]
     }
    ],
