Greatly simplify API for partial

--- a/examples/notebooks/test_app.ipynb
+++ b/examples/notebooks/test_app.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,14 @@
        "      <td>0.0</td>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
-       "      <td>1.934486</td>\n",
+       "      <td>1.299724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>The first president of the United States was George Washington.</td>\n",
-       "      <td>0.709772</td>\n",
+       "      <td>The first president of the United States was George Washington. He served as the president from 1789 to 1797.</td>\n",
+       "      <td>1.126565</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -100,13 +100,13 @@
        "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
        "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
        "\n",
-       "                                                                                                    response  \\\n",
-       "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
-       "1  The first president of the United States was George Washington.                                             \n",
+       "                                                                                                        response  \\\n",
+       "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.       \n",
+       "1  The first president of the United States was George Washington. He served as the president from 1789 to 1797.   \n",
        "\n",
        "    latency  \n",
-       "0  1.934486  \n",
-       "1  0.709772  "
+       "0  1.299724  \n",
+       "1  1.126565  "
       ]
      },
      "metadata": {},
@@ -120,9 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running partial experiment...\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -174,13 +181,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
-       "      <td>chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF</td>\n",
+       "      <td>chatcmpl-8AKL3KrtNF0ZjhTOL0eHu2QcZlcTx</td>\n",
        "      <td>chat.completion</td>\n",
-       "      <td>1697065794</td>\n",
+       "      <td>1697472153</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]</td>\n",
        "      <td>{'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}</td>\n",
-       "      <td>1.934486</td>\n",
+       "      <td>1.299724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -192,14 +199,33 @@
        "      <td>False</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>The first president of the United States was George Washington.</td>\n",
-       "      <td>chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3</td>\n",
+       "      <td>The first president of the United States was George Washington. He served as the president from 1789 to 1797.</td>\n",
+       "      <td>chatcmpl-8AKL4ttPKitT0lKPfsuBmALizYx2d</td>\n",
        "      <td>chat.completion</td>\n",
-       "      <td>1697065795</td>\n",
+       "      <td>1697472154</td>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as the president from 1789 to 1797.'}, 'finish_reason': 'stop'}]</td>\n",
+       "      <td>{'prompt_tokens': 23, 'completion_tokens': 25, 'total_tokens': 48}</td>\n",
+       "      <td>1.126565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gpt-3.5-turbo</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>The first president of the United States was George Washington.</td>\n",
+       "      <td>chatcmpl-8AKL5aYehALEOgDqkV4tooE0pjZq4</td>\n",
+       "      <td>chat.completion</td>\n",
+       "      <td>1697472155</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]</td>\n",
        "      <td>{'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}</td>\n",
-       "      <td>0.709772</td>\n",
+       "      <td>0.793576</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -209,46 +235,56 @@
        "           model  \\\n",
        "0  gpt-3.5-turbo   \n",
        "1  gpt-3.5-turbo   \n",
+       "2  gpt-3.5-turbo   \n",
        "\n",
        "                                                                                                                       messages  \\\n",
        "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
        "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "2  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
        "\n",
        "   temperature  top_p  n  stream  presence_penalty  frequency_penalty  \\\n",
        "0  0.0          1.0    1  False   0.0               0.0                 \n",
        "1  1.0          1.0    1  False   0.0               0.0                 \n",
+       "2  0.5          1.0    1  False   0.0               0.0                 \n",
        "\n",
-       "                                                                                                    response  \\\n",
-       "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
-       "1  The first president of the United States was George Washington.                                             \n",
+       "                                                                                                        response  \\\n",
+       "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.       \n",
+       "1  The first president of the United States was George Washington. He served as the president from 1789 to 1797.   \n",
+       "2  The first president of the United States was George Washington.                                                 \n",
        "\n",
        "                              response_id  response_object  response_created  \\\n",
-       "0  chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF  chat.completion  1697065794         \n",
-       "1  chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3  chat.completion  1697065795         \n",
+       "0  chatcmpl-8AKL3KrtNF0ZjhTOL0eHu2QcZlcTx  chat.completion  1697472153         \n",
+       "1  chatcmpl-8AKL4ttPKitT0lKPfsuBmALizYx2d  chat.completion  1697472154         \n",
+       "2  chatcmpl-8AKL5aYehALEOgDqkV4tooE0pjZq4  chat.completion  1697472155         \n",
        "\n",
        "       response_model  \\\n",
        "0  gpt-3.5-turbo-0613   \n",
        "1  gpt-3.5-turbo-0613   \n",
+       "2  gpt-3.5-turbo-0613   \n",
        "\n",
-       "                                                                                                                                                                                    response_choices  \\\n",
-       "0  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]   \n",
-       "1  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]                                             \n",
+       "                                                                                                                                                                                        response_choices  \\\n",
+       "0  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]       \n",
+       "1  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as the president from 1789 to 1797.'}, 'finish_reason': 'stop'}]   \n",
+       "2  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]                                                 \n",
        "\n",
        "                                                       response_usage  \\\n",
        "0  {'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}   \n",
-       "1  {'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}   \n",
+       "1  {'prompt_tokens': 23, 'completion_tokens': 25, 'total_tokens': 48}   \n",
+       "2  {'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}   \n",
        "\n",
        "    latency  \n",
-       "0  1.934486  \n",
-       "1  0.709772  "
+       "0  1.299724  \n",
+       "1  1.126565  \n",
+       "2  0.793576  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "experiment.run_partial(temperature=0.5)\n",
     "experiment.full_df"
    ]
   },
@@ -717,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +761,8 @@
      "output_type": "stream",
      "text": [
       "Response:\n",
-      "401\n"
+      "200\n",
+      "[{'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}], 'temperature': 0.0, 'top_p': 1.0, 'n': 1, 'stream': False, 'presence_penalty': 0.0, 'frequency_penalty': 0.0, 'response': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.', 'response_id': 'chatcmpl-88dS1ylV1T7BwNiuD53qHp3uylC05', 'response_object': 'chat.completion', 'response_created': 1697068965, 'response_model': 'gpt-3.5-turbo-0613', 'response_choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}], 'response_usage': {'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}, 'latency': 1.445512291, 'user_id': 0, 'experiment_id': 'd38f3ce0-ff4b-48a1-a7eb-e87f160f2344', 'experiment_name': 'RUNNING_ON_SERVER_SIDE_TEST', 'revision_id': 'f6e99087-75dc-46cd-87e5-59f827825afd', 'timestamp': 1697054566670, 'log_id': '652737a6675c713faa41274b'}, {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}], 'temperature': 1.0, 'top_p': 1.0, 'n': 1, 'stream': False, 'presence_penalty': 0.0, 'frequency_penalty': 0.0, 'response': 'The first president of the United States was George Washington, serving from 1789 to 1797.', 'response_id': 'chatcmpl-88dS2l1gWveHxAOuyvqkjoOJV0ZIZ', 'response_object': 'chat.completion', 'response_created': 1697068966, 'response_model': 'gpt-3.5-turbo-0613', 'response_choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington, serving from 1789 to 1797.'}, 'finish_reason': 'stop'}], 'response_usage': {'prompt_tokens': 23, 'completion_tokens': 21, 'total_tokens': 44}, 'latency': 0.6030918751, 'user_id': 0, 'experiment_id': 'd38f3ce0-ff4b-48a1-a7eb-e87f160f2344', 'experiment_name': 'RUNNING_ON_SERVER_SIDE_TEST', 'revision_id': 'f6e99087-75dc-46cd-87e5-59f827825afd', 'timestamp': 1697054566670, 'log_id': '652737a6675c713faa41274c'}]\n"
      ]
     }
    ],
@@ -763,7 +800,7 @@
     "# Print the response\n",
     "print(\"Response:\")\n",
     "print(response.status_code)\n",
-    "# print(response.json())"
+    "print(response.json())"
    ]
   },
   {
@@ -1139,16 +1176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x2e4c45720>"
+       "<pymongo.results.DeleteResult at 0x2e4c97a30>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,6 +1208,183 @@
     "# experiments_collection.delete_many({})\n",
     "# logs_collection.delete_many({})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing auth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f316761ef60ba804c4ae9963656204f14f8b7a85b982e2738aee02e31626fab9295aa760b67dc71300473484f5881744\n",
+      "<!doctype html>\n",
+      "<html lang=en>\n",
+      "<title>401 Unauthorized</title>\n",
+      "<h1>Unauthorized</h1>\n",
+      "<p>The server could not verify that you are authorized to access the URL requested. You either supplied the wrong credentials (e.g. a bad password), or your browser doesn&#39;t understand how to supply the credentials required.</p>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "def get_experiments(access_token):\n",
+    "    # URL for the API endpoint\n",
+    "    api_url = \"http://127.0.0.1:5000/experiment/test_auth\"\n",
+    "\n",
+    "    # Set up headers with the Bearer token\n",
+    "    headers = {\n",
+    "#         'Authorization': f'Bearer {access_token}'\n",
+    "        'Authorization': access_token\n",
+    "    }\n",
+    "\n",
+    "    # Make the GET request with headers\n",
+    "    response = requests.post(api_url, headers=headers)\n",
+    "\n",
+    "    # Return the response object\n",
+    "    return response\n",
+    "\n",
+    "print(os.environ['HEGELAI_API_KEY'])\n",
+    "response = get_experiments(os.environ['HEGELAI_API_KEY'])\n",
+    "print(response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response:\n",
+      "401\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "\n",
+    "url = \"http://127.0.0.1:5000/experiment\"\n",
+    "# url = \"http://127.0.0.1:5000/experiment/logs\"\n",
+    "\n",
+    "model = [\"gpt-3.5-turbo\"]\n",
+    "messages = [\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
+    "    ]\n",
+    "]\n",
+    "temperature = [0.0, 1.0]\n",
+    "\n",
+    "\n",
+    "input_parameters = {\n",
+    "    'experiment_name': 'RUNNING_ON_SERVER_SIDE_TEST',\n",
+    "    'model': models,\n",
+    "    'messages': messages,\n",
+    "    'temperature': temperature,\n",
+    "}\n",
+    "\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {os.environ['HEGELAI_API_KEY']}\",\n",
+    "    \"Content-Type\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "response = requests.get(url, headers=headers, data=json.dumps(input_parameters))\n",
+    "\n",
+    "# Print the response\n",
+    "print(\"Response:\")\n",
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'OPENAI_API_KEY': '', 'Authorization': 'Bearer f0c41ced96e754cc1bf8fdf87725d8f0', 'Content-Type': 'application/json'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response:\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "\n",
+    "url = \"http://127.0.0.1:5001/\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"Authorization\": \"5f577514c87777524f02afa7c1f96fd8abda7a7828725e5eaf00146c7eb6ab1ac11273f1f7bbb8f9b13c5ad9464407db\",\n",
+    "#     \"Authorization\": \"f316761ef60ba804c4ae9963656204f14f8b7a85b982e2738aee02e31626fab9295aa760b67dc71300473484f5881744\",\n",
+    "    \"Content-Type\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "response = requests.get(url, headers=headers, data=json.dumps(input_parameters))\n",
+    "\n",
+    "# Print the response\n",
+    "print(\"Response:\")\n",
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
