Minor remote examples clean up

--- a/examples/notebooks/remote/Saving_and_Loading_ExperimentHarness_to_Remote.ipynb
+++ b/examples/notebooks/remote/Saving_and_Loading_ExperimentHarness_to_Remote.ipynb
@@ -21,7 +21,7 @@
    "id": "38786a7d",
    "metadata": {},
    "source": [
-    "## Prompt Template"
+    "## Prompt Template Harness"
    ]
   },
   {
@@ -50,26 +50,6 @@
     "                                                   message_templates,\n",
     "                                                   user_inputs,\n",
     "                                                   model_arguments=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e6b84646",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "harness.prepare()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cc6cc3ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "harness.run()"
    ]
   },
   {
@@ -169,6 +149,8 @@
     }
    ],
    "source": [
+    "harness.prepare()\n",
+    "harness.run()\n",
     "harness.visualize()"
    ]
   },
@@ -199,7 +181,7 @@
     }
    ],
    "source": [
-    "harness.save_experiment(\"HARNESS\")"
+    "harness.save_experiment(\"HistoryExam\")"
    ]
   },
   {
@@ -1093,7 +1075,7 @@
    "id": "2ebbc052",
    "metadata": {},
    "source": [
-    "## System Prompt"
+    "## System Prompt Harness"
    ]
   },
   {
@@ -1688,7 +1670,15 @@
     }
    ],
    "source": [
-    "harness.save_experiment(\"Comparison HARNESS\")"
+    "harness.save_experiment(\"HistoryModelComparison\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c16ef295",
+   "metadata": {},
+   "source": [
+    "### Load from Remote"
    ]
   },
   {
