Adding remote to OpenAIChat example

--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -403,6 +403,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6802b34",
+   "metadata": {},
+   "source": [
+    "## Saving to Remote"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb74a9a2",
+   "metadata": {},
+   "source": [
+    "For users interested to manage their experiments in a hosted environment. We provide APIs to securely store your experiments in our backend, from which you can load experiments for re-run or share with your team. \n",
+    "\n",
+    "If you are interested in our hosted solution, please reach out to us."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d30cd8ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"HEGELAI_API_KEY\"] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c084bb43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19269a04",
+   "metadata": {},
+   "source": [
+    "## Aggregate Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5626394",
+   "metadata": {},
+   "source": [
+    "You can optional "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "d0007a1f",
